cmake_minimum_required(VERSION 3.10)
project(my_project LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES "Bitset.cpp")

add_executable(my_project ${SOURCE_FILES})
add_executable(Bitset Bitset.cpp)
add_executable(Octal_Fractions "Octal Fractions.cpp")
add_executable(Number_Base_Conversation "Number Base Conversation.cpp")
add_executable(ProblemZ ProblemZ.cpp)
add_executable(ydl ydl.cpp)
add_executable(sd sd.cpp)
add_executable(zj zj.cpp)
add_executable(nmqs nmqs.cpp)
add_executable(SAQ SAQ.cpp)
add_executable(pg pg.cpp)
add_executable(ProblemAA ProblemAA.cpp)
add_executable(ProblemAB ProblemAB.cpp)
add_executable(ProblemAC ProblemAC.cpp)
add_executable(ProblemAD ProblemAD.cpp)
add_executable(ProblemAE ProblemAE.cpp)
add_executable(ProblemAF ProblemAF.cpp)
add_executable(ProblemAG ProblemAG.cpp)
add_executable(ProblemAH ProblemAH.cpp)
add_executable(zs2-A zs2-A.cpp)
add_executable(zs2-B zs2-B.cpp)
add_executable(zs3-1 zs3-1.cpp)
add_executable(zs3-2 zs3-2.cpp)
add_executable(zs3-3 zs3-3.cpp)
add_executable(zs3-4 zs3-4.cpp)
add_executable(zs2-3.4 zs2-3.4.cpp)
add_executable(Amity_Assessment Amity_Assessment.cpp)
add_executable(Limak_and_Displayed_Friends Limak_and_Displayed_Friends.cpp)
add_executable(z-sort z-sort.cpp)
add_executable(Limak_and_Compressing Limak_and_Compressing.cpp)
add_executable(Mischievous_Mess_Makers Mischievous_Mess_Makers.cpp)
add_executable(Kernel_Of_Love Kernel_Of_Love.cpp)
add_executable(Enduring_Exodus Enduring_Exodus.cpp)